# AquaForge-v2

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruffignore  CLAUDE.md  Caddyfile  Dockerfile  HANDOFF.md  MAC_QUICKSTART.md  MIGRATION_PYPROJECT.md  Makefile  RAILWAY_DEPLOYMENT.md  TRANSFER_TO_MAC.md  VERSION_LOG.md  analyze_coach_excel.py  build_vcac_psych_sheet.py  complete_conversion.py  deploy_log.txt  docker-compose.override.yml  docker-compose.yml  docker-quickstart.bat  e2e_scanner.py  generate_coach_report.py  launch.bat  nixpacks.toml  optimized_results.csv  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  railway.toml  ralph.py  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  ruff.toml  run_e2e_check.bat  (+18 more)
.agent/: CONTEXT_LOADER.md  E2E_SESSION_REPORT.md  HANDOFF.md  KNOWLEDGE_BASE.md  PRISM_CHAMPIONSHIP_191_FIX.md  REFERENCE.md  UPGRADE_SUMMARY.md  mcp_config.json  ralph_boundaries.md  ralph_prf.md  workflows.yaml
.agent_backup_20260127_051602/: AI_KNOWLEDGE_MANAGEMENT.md  CONTEXT_LOADER.md  E2E_SESSION_REPORT.md  KNOWLEDGE_BASE.md  PRISM_CHAMPIONSHIP_191_FIX.md  REFERENCE.md  mcp_config.json  ralph_boundaries.md  ralph_guidelines.md  workflows.yaml
.claude/: hooks.json
.ralph/: migration_prf.md
__DATA__/: Opponent_Team_Template.csv  README.md  Seton_Team_Template.csv  TEMPLATE_SwimMeet.csv
data/: championship_factors.json  dq_dns_rates.json  generate_samples.py
design-system/: MASTER.md
docs/: ADAPTIVE_SCORE_RANGES.md  AI_CODING_TOOLS_RESEARCH_2026.md  AI_HANDOFF_CONTEXT.md  API_REFERENCE.md  ARCHITECTURE.txt  ARCHITECTURE_ANALYSIS.md  CHAMPIONSHIP_MODULE_ROADMAP.md  CHAMPIONSHIP_SCORING_MODEL.md  CHAMPIONSHIP_STRATEGY_SPECIFICATION.md  CLIENT_BILLING_RATE_CARD.md  COACH_EXCEL_ANALYSIS.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SUMMARY.md  CONVERSION_COMPLETE.md  COST_EFFORT_LOG.md  COVERAGE_CONFIGURATION_SUMMARY.md  COVERAGE_EXAMPLES.md  COVERAGE_QUICKSTART.md  CSV_TEMPLATE_GUIDE.md  DATA_ARCHITECTURE_PRISM_REVIEW.md  DATA_COLLECTION_GUIDE.md  DATA_EXPLORATION_REPORT.md  DATA_FILTERING_FEATURE.md  DATA_PIPELINE_AUDIT_2026-01-16.md  DEPLOY_FIX_INSTRUCTIONS.md  DEV_ENVIRONMENT_SETUP.md  DOCKER_GUIDE.md  DOCKER_SETUP_COMPLETE.md  DUPLICATE_PREVENTION_TEST.md  E2E_DATAFLOW_COMPLETE.md  E2E_DATAFLOW_FIXES_SUMMARY.md  E2E_DATAFLOW_FIX_PLAN.md  E2E_REPORT.md  ENTERPRISE_ROADMAP.md  EVENT_SWARMING_STRATEGY.md  EXHIBITION_SWIMMERS.md  FINAL_VERIFICATION_CHECKLIST.md  GUROBI_VS_AQUAOPTIMIZER_ANALYSIS.md  IDEAL_DATA_FORMAT.md  IMPLEMENTATION_STATUS.md  (+37 more)
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
opencode/: README.md  config.yaml  config.yaml.example  main.py  pyproject.toml
opencode/providers/: __init__.py  antigravity.py
scripts/: analyze_coach_excel.py  analyze_meet_512.py  analyze_seed_accuracy.py  aqua_optimizer_backtest.py  attrition_validation_utils.py  backtest_mdb_512.py  backtest_meet_512.py  build_vcac_psych_sheet.py  championship_backtest.py  championship_comparison.py  cleanup_extensions.sh  compare_coach_vs_optimizer.py  compare_visaa_2026_gurobi_vs_aqua.py  complete_conversion.py  compute_dq_dns_rates.py  debug_gurobi.py  discover_season_meets.py  e2e_scanner.py  generate_aqua_championship_csv.py  generate_backtest_input.py  generate_championship_pdf.py  generate_coach_report.py  generate_consolidated_dashboard.py  generate_visaa_championship_pdf.py  ingest_history.py  ingest_scraped_data.py  migrate_db.py  post_season_accuracy_report.py  refresh_opponent_data.py  run_backtest_comparison.py  run_championship_backtest.py  run_meet_512_optimization.py  run_vcac_projection.py  run_visaa_optimizer.py  scrape_swimcloud.py  scrape_visaa_missing_events.py  season_backtest.py  strategy_comparison_backtest.py  test_mdb_bridge.py  validate_attrition_ab.py  (+7 more)
swim_ai_reflex/: DEPRECATED.md  clean_start_server.bat  start_server.bat
test_outputs/: test_export.csv  test_export.html  test_export.xlsx
tests/: check_1event.py  compare_teams.py  conftest.py  debug_optimization_api.py  debug_score.py  optimizer_comparison.py  reproduce_190_0.py  reproduce_opponent_empty.py  test_232_points.py  test_api.py  test_api_integration.py  test_aqua_multi_team_scoring.py  test_attrition_model.py  test_attrition_scoring_integration.py  test_attrition_validation.py  test_backtest.py  test_championship_6_teams.py  test_championship_factors.py  (+37 more)
(+417 files in other folders)
